# Challenges

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  requirements.txt
challenges/: .env  .pre-commit-config.yaml  README.md  main.py  pylintrc  pyproject.toml  requirements (copia).txt  uploadFiles copy.py
challenges/Aux/: sqlConnexion.py  sqlPostgresCli.py
challenges/libraries/: _general.py  s3_conn.py  sqlConnexion.py  sqlPostgresCli.py
filesGo/: hired_employees.csv
filesGoAux/: hired_employees_aux.csv
scripts/: tables.sql
